# test_hdd

./: CMakeLists.txt  main.cpp  readme.md
lib/: work_hdd.cpp  work_hdd.h
src/: main.cpp
